mywordpress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-blog
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wordpress-blog
  template:
    metadata:
      labels:
        app: wordpress-blog
    spec:
      containers:
      - name: wordpress-blog
        image: wordpress #phl730/myblog:1.1.1
        ports:
        - containerPort: 80
        volumeMounts:
          - mountPath: "/mnt/azure"
            name: volume
      volumes:
      - name: volume
        persistentVolumeClaim:
          claimName: my-azurefile
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: "app"
                    operator: In
                    values:
                    - wordpress-blog
              topologyKey: "kubernetes.io/hostname"

---
apiVersion: v1
kind: Service
metadata:
  name: php-svc
spec:
  type: ClusterIP
  ports:
    - port: 80
  selector:
    app: wordpress-blog
